[package]
name = "torrent_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.15"
thiserror = "1.0.65"
tracing = "0.1"
tracing-subscriber = "0.3"
thread-rng = "0.0.0"
rand = "0.8.5"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
mockito = "1.2.0"
